@@ -3,6 +3,8 @@ MEDIA_TYPE = CD-ROM
 TARGET = $(BOOT)
 EXTRANAME = $(MEDIUM)-
 
+MANIFEST-BOOT = "$(SUBARCH)/$(MEDIUM)-boot.img: CDROM image for SGI IP22 machines with R4x00 CPU"
+
 # Create a bootable image for the CD.
 .PHONY: arch_boot
 arch_boot:
