@@ -3,6 +3,8 @@ MEDIA_TYPE = netboot image
 TARGET = $(BOOT)
 EXTRANAME = $(MEDIUM)-
 
+MANIFEST-BOOT = "$(SUBARCH)/$(MEDIUM)-boot.img: tftp boot image for SGI IP22 machines with R4x00 CPU"
+
 # Create a bootable tftp image.
 .PHONY: arch_boot
 arch_boot:
